--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This is an IRC bot written in C# with several IRC/text based games built in.
-He also has several commands that allow him to be controlled by the channel
+It also has several commands that allow it to be controlled by the channel
 users.
